tests/baselines/reference/multipleDefaultExports02(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
m1.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
m1.ts(1,25): error TS2393: Duplicate function implementation.
m1.ts(5,25): error TS2323: Cannot redeclare exported variable 'default'.
m1.ts(5,25): error TS2393: Duplicate function implementation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== m1.ts (4 errors) ====
    export default function foo() {
                            ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~~~
!!! error TS2393: Duplicate function implementation.
    
    }
    
    export default function bar() {
                            ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~~~
!!! error TS2393: Duplicate function implementation.
    
    }
    
==== m2.ts (0 errors) ====
    import Entity from "./m1"
    
    Entity();